# QuestPPCalibration

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
apply_calibration/: index.html
calc_ku/: index.html
calc_pumping_time/: index.html
check_concentration/: index.html
data/calibrated/170112/: 34313_PDP8_calibrated_winsma30_win71_win1-7_w15-range30_s1.txt  34314_PDP8_calibrated_winsma30_win71_win1-7_w15-range35_s2.txt  34315_PDP8_calibrated_f1--2_f2-1.0_winsma-30_winsg1-71_winsg2-7_w15-range35_s2.txt  34316_PDP8_calibrated_winsma30_win71_win1-7_w15-range70_s2.txt  34317_PDP8_calibrated_f1--2_f2-1.0_winsma-30_winsg1-71_winsg2-7_w10-range72_s2.txt  34318_PDP8_calibrated_f1--2_f2-1.0_winsma-30_winsg1-71_winsg2-7_w10-range72_s3.txt  34319_PDP8_calibrated_winsma30_win71_win1-7_w10-range72_s1.txt  34320_PDP8_calibrated_f1--2_f2-1.0_winsma-30_winsg1-71_winsg2-7_w2-range310_s5.txt
data/extract_shot/170112/: 34313_PDP8_extracted.txt  (+7 more)
docs/: apply_calibration.md  calc_ku.md  calc_pumping_time.md  check_concentration.md  extract_shot.md  index.md  reference.md
example/01_extract_shot/: extract_shot.ipynb
example/02_calc_pumping_time/: calc_pumping_time_170123.ipynb  calibrationsummary.py
example/03_apply_calibration/: apply_calibration_170112.ipynb
example/04_check_concentration/: check_concentration_170112.ipynb
extract_shot/: index.html
search/: search_index.json
src/quest_pp_calibration/: convert_qms_time.py  flux_analysis.py  std.py
tests/: test_hello.py
(+17 files in other folders)
