[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quest-pp-calibration"
version = "0.1.0"
description = "How to calibrate quest pp"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "K.Takahashi", email = "you@example.com" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "aklab @ git+https://github.com/queezz/aklab.git@3853450a9cbd699fb87406c006a03195f3b885c7",
  "numpy==1.26.4",
  "scipy==1.11.4",
  "matplotlib>=3.8",
  "pandas>=2.2",  
  "ipywidgets>=8.1",
  "plotly>=6.1",
  "nbformat>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4.0",
  "black>=24.3.0",
  "mypy>=1.8.0",
  "ipython",
  "ipykernel",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mkdocs-jupyter>=0.25",
]

[project.urls]
Homepage = "https://github.com/your/repo"
Repository = "https://github.com/your/repo"
Issues = "https://github.com/your/repo/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","B","UP","W","C90"]
lint.ignore = ["E203","E266","E501"]
src = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
